SMA-84: fixed modal alignment to center

--- a/frontend/sportsmatch-app/src/styles/Modal.css
+++ b/frontend/sportsmatch-app/src/styles/Modal.css
@@ -12,7 +12,9 @@
   }
 
   .modal-box {
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background: transparent;
     width: 90%;
     height: 75%;    
